--- a/escom-bpm-web/src/main/webapp/view/common/drag-drop-dlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/drag-drop-dlg.xhtml
@@ -54,7 +54,7 @@
                          actionListener="#{_bean.addItemToGroup()}" 
                          update="westFRM mainFRM #{_updates}"
                          onclick="PF('AddTblDlg').hide();"
-                         oncomplete="initDND()">
+                         oncomplete="initDND();">
         </p:commandButton>
         <p:commandButton value="#{bundle.Cancel}" process="@this" 
                          styleClass="ui-confirmdialog-no"  icon="ui-icon-close" 
