--- a/escom-bpm-web/src/main/webapp/view/processes/process-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/process-explorer.xhtml
@@ -19,8 +19,8 @@
     <ui:param name="_showDateCreate" value="#{true}"/>
     <ui:param name="_showDateChange" value="#{false}"/>
      
-    <ui:param name="_CreateGroupLabel" value="#{bundle.CreateGroup}" />
-    <ui:param name="_CreateItemLabel" value="#{bundle.Create}" />
+    <ui:param name="_CreateGroupLabel" value="#{bundle.CreateProcType}" />
+    <ui:param name="_CreateItemLabel" value="#{bundle.CreateProcess}" />
 
     <!-- специфичные поля поиска -->
     <ui:define name="searche">
