--- a/escom-bpm-web/src/main/webapp/resources/css/processes.css
+++ b/escom-bpm-web/src/main/webapp/resources/css/processes.css
@@ -1,7 +1,27 @@
+.ui-diagram-element {                 
+    text-align: center;
+    color: #ffffff;
+    border-radius: 4px;
+    border:0.1em dotted #E5E4E2;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.8);
+}
+
+.ui-diagram-element:hover {
+    background-color: #C7C6C4;
+}
+
 .ui-diagram-task {
     background-color: #9ed4ef;
-    width: 10em;
-    height: 5em;
+    width: 12em;
+    height: 6em;
+}
+
+.ui-diagram-subprocess {
+    width:13em;
+    height:6em;
+    border-radius: 16px !important;
+    background-color: wheat;
+    color: #000000 !important;
 }
 
 .noExecutor {
@@ -29,18 +49,6 @@
 
 .finishAndNotInList {
     color: yellow !important;
-}
-
-.ui-diagram-element:hover {
-    background-color: #C7C6C4;
-}
-
-.ui-diagram-element {                 
-    text-align: center;
-    color: #ffffff;
-    border-radius: 4px;
-    border:0.1em dotted #E5E4E2;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.8);
 }
 
 .ui-diagram-logic {
@@ -74,13 +82,6 @@
     width:10em;
     height:4em;
     background-color: cadetblue;
-}
-
-.ui-diagram-subprocess {
-    width:10em;
-    height:5em;
-    border-radius: 16px !important;
-    background-color: wheat;    
 }
 
 .ui-diagram-enter {
