--- a/escom-bpm-web/src/main/webapp/view/docs/doc-viewer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-viewer.xhtml
@@ -9,6 +9,7 @@
     <ui:param name="_bean" value="#{attacheBean}"/>
 
     <ui:define name="centerContent">   
+        #{remarkCardBean.onBeforeOpenCard()} 
         <script>
             var isFullPage = #{_bean.isFullPageMode()};
             var formName = '#{_bean.getFormName()}';
@@ -23,9 +24,9 @@
             }
         </script> 
 
-        <pe:layout fullPage="true" style="font-size: 80%;" stateCookie="true">            
+        <pe:layout fullPage="true" style="font-size: 80%;" stateCookie="true">
 
-            <pe:layoutPane id="east" position="east" rendered="#{attacheBean.isRemarkTabShow()}" resizable="true" size="30%">
+            <pe:layoutPane id="east" position="east" rendered="#{remarkCardBean.isRemarkTabShow()}" resizable="true" size="30%">
                 <h:form id="eastFRM" style="font-size: 90%;  height: 100%;">
                     <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="without-spaces ui-grid-col-12" style="height: 100%;">
                         <p:messages id="messages" showDetail="false" closable="true" styleClass="ui-grid-col-12 without-spaces">
