--- a/escom-bpm-web/src/main/webapp/view/docs/remarks/remark-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/remarks/remark-card.xhtml
@@ -9,7 +9,7 @@
     <ui:define name="page_body">
 
         <p:tab id="cardTab" title="#{bundle.Remark}">     
-            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces">
+            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces">
                 <p:outputLabel value="#{bundle.Author}:" indicateRequired="true" />                
                 <p:inputText value="#{_bean.editedItem.author.fullName}"
                              styleClass="ui-grid-col-12"
