--- a/escom-bpm-web/src/main/webapp/view/processes/process-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/process-card.xhtml
@@ -13,6 +13,7 @@
         <ui:define name="menuExtReports"> 
             <p:separator />
             <p:menuitem value="#{bundle.ConcorderList}" icon="ui-icon-document"
+                        rendered="#{_bean.editedItem.owner.showReports}"
                         disabled="#{_bean.editedItem.id == null}"
                         actionListener="#{processCardBean.onPreViewListConcorder()}">
             </p:menuitem>
@@ -41,40 +42,41 @@
             </p:commandButton>
         </ui:define>
 
-        <ui:define name="CardToolButtons">            
+        <ui:define name="CardToolButtons">
             <h:outputLabel value="#{bundle.State}: "/>
             <p:outputLabel value="#{processCardBean.getLabelFromBundle(_bean.editedItem.state.currentState.name)}"/>
             <p:spacer width="15"/>
 
-            <p:menuButton icon="ico-play-16" title="#{bundle.StartProcess}" disabled="#{_bean.isDisableRunBtn()}">
-                <p:menuitem value="#{bundle.NewEditionSendToAll}" icon="ui-icon-play" update="mainFRM"
-                            actionListener="#{processCardBean.onRun('send_all')}"
-                            onstart="PF('statusDialog').show()"
-                            oncomplete="PF('statusDialog').hide(); return itemChange = 0;">
-                    <f:param name="isRequired" value="true"/>
-                </p:menuitem>
-                <p:menuitem value="#{bundle.SendJustDoNotAgree}" icon="ui-icon-play" update="mainFRM"
-                            actionListener="#{processCardBean.onRun('send_notagree')}"
-                            onstart="PF('statusDialog').show()"
-                            oncomplete="PF('statusDialog').hide(); return itemChange = 0;">
-                    <f:param name="isRequired" value="true"/>
-                </p:menuitem>
-            </p:menuButton> 
+            <h:panelGroup rendered="#{DictStates.STATE_COMPLETED != _bean.editedItem.state.currentState.id}">
+                <p:commandButton icon="ico-play-16"  title="#{bundle.StartProcess}" 
+                                rendered="#{_bean.runOptions.size() == 1}"
+                                disabled="#{_bean.isDisableRunBtn()}"
+                                actionListener="#{processCardBean.onRun()}"
+                                onstart="PF('statusDialog').show()"
+                                oncomplete="PF('statusDialog').hide(); return itemChange = 0;">
+                        <f:param name="isRequired" value="true"/>
+                </p:commandButton>
 
-            <p:spacer width="2"/>
-            <p:commandButton id="btnStop" title="#{bundle.InterruptionProcess}" icon="ico-stop-16"
-                             disabled="#{processCardBean.isDisableBtnStop()}"
-                             update="mainFRM" 
-                             actionListener="#{processCardBean.onStop()}"
-                             oncomplete="return itemChange = 0;">
-                <p:confirm header="#{bundle.InterruptionProcess}" message="#{msg.ConfirmInterruptionProcess}" icon="ui-icon-alert" />
-            </p:commandButton>
+                <p:menuButton icon="ico-play-16" model="#{_bean.runMenuModel}" title="#{bundle.StartProcess}" 
+                              rendered="#{_bean.runOptions.size() > 1}"
+                              disabled="#{_bean.isDisableRunBtn()}">
+                </p:menuButton>
+
+                <p:spacer width="2"/>
+                <p:commandButton id="btnStop" title="#{bundle.InterruptionProcess}" icon="ico-stop-16"
+                                 disabled="#{processCardBean.isDisableBtnStop()}"
+                                 update="mainFRM" 
+                                 actionListener="#{processCardBean.onStop()}"
+                                 oncomplete="return itemChange = 0;">
+                    <p:confirm header="#{bundle.InterruptionProcess}" message="#{msg.ConfirmInterruptionProcess}" icon="ui-icon-alert" />
+                </p:commandButton>
+            </h:panelGroup>
         </ui:define>
 
         <ui:define name="page_body">                
             <p:tab title="#{bundle.Process}">
                 <p:panelGrid columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces" >
-                    <p:outputLabel value="#{bundle.DocumentForConcorded}:" indicateRequired="true" />
+                    <p:outputLabel value="#{bundle.Document}:" indicateRequired="true" />
                     <ui:include src="/view/common/item-select-btn.xhtml" >
                         <ui:param name="_itemValue" value="#{_bean.editedItem.document}"/>
                         <ui:param name="_itemLabel" value="nameEndElipse"/>
@@ -121,7 +123,7 @@
                         <ui:param name="_update" value=""/>
                     </ui:include>
 
-                    <p:outputLabel value="#{bundle.TermApproval}:" indicateRequired="true"/> 
+                    <p:outputLabel value="#{bundle.Term}:" indicateRequired="true"/> 
                     <p:calendar id="dtPlanExecDate" value="#{processCardBean.editedItem.planExecDate}"  
                                 styleClass="without-spaces" pages="2"
                                 timeZone="#{TimeZone.getDefault()}" disabledWeekends="true"
@@ -151,7 +153,7 @@
                 </p:panelGrid>
             </p:tab>        
 
-            <p:tab title="#{bundle.ApprovalSheet}">
+            <p:tab title="#{bundle.ApprovalSheet}" rendered="#{_bean.editedItem.owner.showReports}">
                 <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces" > 
                     <h:panelGroup styleClass="ui-grid-col-12 without-spaces" >                         
                         <p:outputLabel value="#{bundle.NumberSheetConcorder}:" />
@@ -212,6 +214,7 @@
         
         <ui:define name="dialogs">
             <ui:include src="/view/tasks/report.xhtml"/>
+            <ui:include src="/view/processes/scheme.xhtml"/>
         </ui:define>
     </ui:composition>
 </html>
