--- a/escom-bpm-web/src/main/webapp/view/processes/types/processtype-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/types/processtype-explorer.xhtml
@@ -1,6 +1,8 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="/view/templ/templ-explorer.xhtml">
+                xmlns:p="http://primefaces.org/ui"
+                template="/view/templ/templ-explorer.xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <!-- стандарный обозреватель/селектор -->
     
@@ -16,11 +18,14 @@
     <ui:param name="_showDateCreate" value="#{true}"/>
     <ui:param name="_showDateChange" value="#{true}"/>
      
-    <ui:param name="_CreateGroupLabel" value="#{bundle.Create}" />
-    <ui:param name="_CreateItemLabel" value="#{bundle.Create}" />
+    <ui:param name="_CreateGroupLabel" value="#{bundle.CreateProcType}" />
+    <ui:param name="_CreateItemLabel" value="#{bundle.CreateProcType}" />
     
     <!-- специфичные поля таблицы обозревателя -->
-    <ui:define name="specDetailColumns">        
+    <ui:define name="specDetailColumns"> 
+        <p:column headerText="#{bundle.TermApproval}" width="60" priority="3" >
+             <h:outputLabel value="#{''.concat(item.termHours).concat(' ').concat(bundle.HourShort)}"/>                            
+        </p:column>
     </ui:define>
 
 </ui:composition>
