--- a/escom-bpm-web/src/main/webapp/view/tasks/task-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/tasks/task-card.xhtml
@@ -170,14 +170,14 @@
 
         <p:tab title="#{bundle.Settings}" rendered="#{!taskCardBean.isTaskReadOnly()}">
             <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces">
-                <p:outputLabel value="#{bundle.ListResults}" indicateRequired="true"/>
-                <p:separator style="margin-top: 0em;"/>
+                <p:outputLabel value="#{bundle.AvailableActions}" indicateRequired="true"/>
                 <p:pickList id="pickList" value="#{taskCardBean.results}" var="result" converter="resultConverter"
                             showCheckbox="true"
+                            onTransfer="itemChange = 1;"
                             required="#{param['isRequired'] == 'true'}"
                             requiredMessage="#{bundle.Field} [#{bundle.ListResults}] #{bundle.MustBeFilled}"                                
                             itemLabel="#{resultBean.getLabelFromBundle(result.getName())}" itemValue="#{result}">
-                    <f:facet name="sourceCaption">#{bundle.AvailableResults}</f:facet>
+                    <f:facet name="sourceCaption">#{bundle.AvailableButton}</f:facet>
                     <f:facet name="targetCaption">#{bundle.Selected}</f:facet>
                 </p:pickList>
             </p:panelGrid>
